--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -27,8 +27,8 @@
     "import gmaps\n",
     "import os\n",
     "\n",
-    "# Import API key\n",
-    "g_key = \"AIzaSyAQJy-pBGlyd9I3npmfuZljZ3S6KHW2YVQ\""
+    "# Import API key\n",from api_keys import g_key
+    "from api_keys import g_key",
    ]
   },
   {
